testsuite/tests/parser/should_fail/RecordDotSyntaxFail7.stderr
[1 of 3] Compiling RecordDotSyntaxA ( RecordDotSyntaxA.hs, RecordDotSyntaxA.o )
[2 of 3] Compiling Main             ( RecordDotSyntaxFail7.hs, RecordDotSyntaxFail7.o )

RecordDotSyntaxFail7.hs:9:16: error: parse error on input ‘A.foo’
